@@ -15,6 +15,8 @@ dispatch
 
 * Added addtables script'
 
+* Fixed typo in README.
+
 
 2012.04.22, v0.2.0
 
